# confluence-summarizer

./: .coverage  .env.example  .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  DELIVERABLES.md  GEMINI.md  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  SECURITY.md  agents.md  pyproject.toml  pyrightconfig.json  test.db-shm  test.db-wal  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  security.yml  validate.yml
src/confluence_refiner/: database.py  db.py  main.py  models.py
src/confluence_refiner/agents/: analyst.py  common.py  orchestrator.py  reviewer.py  writer.py
src/confluence_refiner/services/: confluence.py  rag.py
src/confluence_summarizer/: config.py  database.py  deps.py  main.py  models.py  refinement.py  routes.py  tasks.py
src/confluence_summarizer/agents/: __init__.py  analyst.py  common.py  orchestrator.py  reviewer.py  writer.py
src/confluence_summarizer/models/: domain.py
src/confluence_summarizer/services/: confluence.py  rag.py
test_chroma_db/: chroma.sqlite3
tests/: conftest.py  test_agents.py  test_confluence.py  test_confluence_extras.py  test_core.py  test_database_validation.py  test_db.py  test_edge_cases.py  test_main.py  test_main_extras.py  test_main_integration.py  test_main_tasks.py  test_more_coverage.py  test_orchestrator.py  test_rag.py  test_reviewer_robustness.py  test_services.py  test_tasks.py
