[project]
name = "confluence-summarizer"
version = "0.1.0"
description = "A robust Python system to connect to Confluence API, ingest content into RAG, and use AI agents to analyze, criticize, and rewrite documentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
    "onnxruntime>=1.24.2",
    "redis>=5.0.0",
    "nltk>=3.9.4",
    "requests>=2.33.0",
    "cryptography>=46.0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.360",
    "flake8>=7.0.0",
    "respx>=0.21.1",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
